fixed white text not showing, removing unneeded attractions code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,8 @@ body {
   background-color: black;
 }
 
-p {
+header p {
   font-size: 1em;
-  font-family: 'Alegreya Sans SC', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Alegreya Sans SC", Calibri, "Trebuchet MS", sans-serif;
   color: white;
 }
-
